Ansible/awx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx
  namespace: awx
  labels:
    app: awx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '30'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1800'
spec:
  tls:
    - hosts:
        - awx.lucasnet.int
      secretName: lucasnet-tls
  rules:
    - host: awx.lucasnet.int
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: awx-service
                port:
                  number: 80
